--- a/uj/zajecia/24-25l/ljk5/index.html
+++ b/uj/zajecia/24-25l/ljk5/index.html
@@ -132,7 +132,7 @@
 			</tr>
 			<tr>
 				<td class="schedule-lecture" rowspan="5">Zajęcia</td>
-				<td class="schedule-lecture" rowspan="5"><!--a href="uj/zajecia/24-25l/ljk5/zajecia/2"-->Arkusz 2<!--/a--></td>
+				<td class="schedule-lecture" rowspan="5"><a href="uj/zajecia/24-25l/ljk5/zajecia/czytanie/2">Arkusz 2</a></td>
 			</tr>
 			<tr>
 				<th scope="row">5</th>
@@ -231,8 +231,8 @@
 			<tr>
 				<th scope="row">6</th>
 				<td>30 kwietnia 2025</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">edukacja</td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/4">수능에 국가 시계 맞춰진 한국의 독특한 문화</a></td>
 			</tr>
 			<tr>
 				<th scope="row">7</th>
@@ -264,11 +264,6 @@
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Praca domowa 5</td>
-				<td class="schedule-presentation">Joanna Radwańska - tłumaczenie audiowizualne</td>
-				<td class="schedule-presentation"></td>
-			</tr>
-			<tr>
-				<td class="schedule-presentation">Praca domowa 6</td>
 				<td class="schedule-presentation">Anna Kawałek - książka kryminalna</td>
 				<td class="schedule-presentation"></td>
 			</tr>
@@ -299,8 +294,13 @@
 				<td class="schedule-lecture"></td>
 			</tr>
 			<tr>
-				<th scope="row" rowspan="4">12</th>
-				<td rowspan="4">11 czerwca 2025</td>
+				<th scope="row" rowspan="5">12</th>
+				<td rowspan="5">11 czerwca 2025</td>
+				<td class="schedule-presentation">Praca domowa 5</td>
+				<td class="schedule-presentation">Joanna Radwańska - tłumaczenie audiowizualne</td>
+				<td class="schedule-presentation"></td>
+			</tr>
+			<tr>
 				<td class="schedule-presentation">Praca domowa 7</td>
 				<td class="schedule-presentation">Natalia Gadomska - polityczne podziały w Korei Płd. / posiadanie broni jądrowej przez Koreę Płd. / urbanizacja w Seulu</td>
 				<td class="schedule-presentation"></td>
