--- a/uj/zajecia/24-25l/ljk5/zajecia/czytanie/1/index.html
+++ b/uj/zajecia/24-25l/ljk5/zajecia/czytanie/1/index.html
@@ -348,7 +348,7 @@
 		<li>아기는 혼잣말을 할 때 지시어를 자주 사용한다.</li>
 		<li>아기는 엄마라는 단어보다 지시어를 먼저 습득한다.</li>
 		<li>지시어를 습득하는 시기는 언어권마다 다르게 나타난다.</li>
-		<li>지시어를 상대방과 상황을 공유해야 의미를 전달할 수 있다.</li>
+		<li>지시어를 상대방과 상황을 공유해야 의미를 전달할 수 있다. <strong class="correct">✓</strong></li>
 	</ol>
 </div>
 
@@ -386,7 +386,7 @@
 		<li>소진증후군이 사회에 미치는 영향을 분석해야 한다.</li>
 		<li>소진증후군의 원인과 증상의 관계를 파악해야 한다.</li>
 		<li>소진증후군의 증상에 맞는 치료법을 개발해야 한다.</li>
-		<li>소진증후군이 발생하지 않도록 사전에 노력해야 한다.</li>
+		<li>소진증후군이 발생하지 않도록 사전에 노력해야 한다. <strong class="correct">✓</strong></li>
 	</ol>
 </div>
 <div class="exam-question">
@@ -400,7 +400,7 @@
 		<li>자금 - fundusze</li>
 		<li>지원 - wsparcie</li>
 		<li>이공계 - nauki przyrodnicze i inżynieria</li>
-		<li>인재 - talent</li>
+		<li>인재 - talent (osoba)</li>
 		<li>첨단 - nowoczesny</li>
 		<li>지식 - wiedza</li>
 		<li>가치 - wartość</li>
@@ -414,7 +414,7 @@
 		<p>기술 경쟁력이 중요한 시대가 되면서 무형 자신에 대한 금융권의 자금 지원이 확대되고 있다. 이때 중요한 것이 이공계 출신 인재의 역할이다. 그들은 첨단 기술에 대한 지식을 바탕으로 보통 사람들은 잘 모르는 무형 자산의 가치를 판단해 내는 역할을 한다. 따라서 기업의 성장 가능성에 대해 제대로 평가하기 위해서는 금융권 내에서 이공계 출신 전문 인력이 차지하는 비중이 높아져야 한다.</p>
 	</div>
 	<ol>
-		<li>금융권에서 이공계 출신 인력의 채용이 확대되어야 한다.</li>
+		<li>금융권에서 이공계 출신 인력의 채용이 확대되어야 한다. <strong class="correct">✓</strong></li>
 		<li>금융권 내에서 고용인에 대한 재교육이 실시되어야 한다.</li>
 		<li>무형 자산에 대한 금융권의 자금 지원이 증가되어야 한다.</li>
 		<li>금융권에서 직원을 재교육시키는 방법이 변화되어야 한다.</li>
