--- a/uj/zajecia/25-26z/assk/zajecia/3/index.html
+++ b/uj/zajecia/25-26z/assk/zajecia/3/index.html
@@ -159,7 +159,9 @@
 	<li><a href="uj/zajecia/25-26z/assk/zajecia/3/img/선호하는김치요리.jpg"><img src="uj/zajecia/25-26z/assk/zajecia/3/img/선호하는김치요리.jpg" alt="선호하는김치요리"></a></li>
 	<li><a href="uj/zajecia/25-26z/assk/zajecia/3/img/한국문화에서김치가치.jpg"><img src="uj/zajecia/25-26z/assk/zajecia/3/img/한국문화에서김치가치.jpg" alt="한국문화에서김치가치"></a></li>
 	<li><a href="uj/zajecia/25-26z/assk/zajecia/3/img/김치시장.jpg"><img src="uj/zajecia/25-26z/assk/zajecia/3/img/김치시장.jpg" alt="김치시장"></a></li>
-	<li><a class="youtube-thumbnail" href="https://www.youtube-nocookie.com/embed/ky7rQiy2WhI"><img src="uj/zajecia/25-26z/assk/zajecia/3/img/ky7rQiy2WhI.webp" alt="함흥김치공장 준공"></a></li>
+	<!-- <li><a class="youtube-thumbnail" href="https://www.youtube-nocookie.com/embed/WyZ7k4wa5ZY"><img src="uj/zajecia/25-26z/assk/zajecia/3/img/ky7rQiy2WhI.webp" alt="함흥김치공장 준공"></a></li> -->
+	<li><a class="youtube-thumbnail" href="https://www.youtube-nocookie.com/embed/ow5Bzc8efiY"><img src="uj/zajecia/25-26z/assk/zajecia/3/img/ow5Bzc8efiY.webp" alt="Przepis na KIMCHI/ Valerie Marzec"></a></li>
+	<li><a class="youtube-thumbnail" href="https://www.youtube-nocookie.com/embed/Ch5Z5bkjAr0"><img src="uj/zajecia/25-26z/assk/zajecia/3/img/Ch5Z5bkjAr0.webp" alt="Kim Jong Un visit the new Kimchi Factory"></a></li>
 </ul>
 
 </body></html>
