--- a/uj/zajecia/25-26z/licc/index.html
+++ b/uj/zajecia/25-26z/licc/index.html
@@ -98,7 +98,7 @@
 				<th scope="row">5</th>
 				<td>4 November 2025</td>
 				<td class="schedule-lecture">Lecture 5</td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture"><a href="uj/zajecia/25-26z/licc/lectures/3">Korean Language</a></td>
 			</tr>
 			<tr>
 				<th rowspan="2" scope="row">6</th>
