--- a/uj/zajecia/24-25z/ljk4/zajecia/3/index.html
+++ b/uj/zajecia/24-25z/ljk4/zajecia/3/index.html
@@ -247,7 +247,7 @@
 	<h3>13.</h3>
 	<ul>
 		<li>보물 - skarb</li>
-		<li>팥 - pole</li>
+		<li>밭 - pole</li>
 		<li>파다 - kopać</li>
 		<li>실망하다 - doznać zawodu</li>
 		<li>아깝다 - być szkoda</li>
@@ -263,7 +263,7 @@
 		<li>뜻 - znaczenie, sens (słów)</li>
 	</ul>
 	<div class="topik-textbox">
-		<p>(가) 아들은 보물을 찾기 위해 팥을 파 봤지만 아무것도 나오지 않았다.</p>
+		<p>(가) 아들은 보물을 찾기 위해 밭을 파 봤지만 아무것도 나오지 않았다.</p>
 		<p>(나) 아들은 실망했지만 힘들게 밭을 판 것이 아까워서 밭에 씨를 뿌렸다.</p>
 		<p>(다) 한 농부가 게으른 아들에게 밭에 보물을 숨겼다는 말을 남기고 죽었다.</p>
 		<p>(라) 시간이 흘러 많은 열매가 맺혔고 아들은 그때서야 아버지의 뜻을 알게 되었다.</p>
