--- a/viiilo/zajecia/24-25z/jk2/zajecia/11-1/index.html
+++ b/viiilo/zajecia/24-25z/jk2/zajecia/11-1/index.html
@@ -118,13 +118,21 @@
 
 	<p>
 		눈꽃이 떨어져요<br>
+		Płatki śniegu opadają<br>
 		또 조금씩 멀어져요<br>
+		i znowu oddalają się po trochu<br>
 		보고 싶다 (보고 싶다)<br>
+		Tęsknię (tęsknię)<br>
 		보고 싶다 (보고 싶다)<br>
+		Tęsknię (tęsknię)<br>
 		얼마나 기다려야<br>
+		Jak długo mam jeszcze czekać?<br>
 		또 몇 밤을 더 새워야<br>
+		Jak wiele nieprzespanych nocy mam jeszcze spędzić?<br>
 		널 보게 될까 (널 보게 될까)<br>
-		만나게 될까 (만나게 될까, ooh-ooh-ooh)
+		Żeby Cię zobaczyć (żeby Cię zobaczyć)<br>
+		만나게 될까 (만나게 될까, ooh-ooh-ooh)<br>
+		Żeby Cię spotkać (żeby Cię spotkać, ooh-ooh-ooh)
 	</p>
 </div>
 
@@ -141,9 +149,13 @@
 
 	<p>
 		추운 겨울 끝을 지나<br>
+		Koniec tej mroźnej zimy przemija<br>
 		다시 봄날이 올 때까지<br>
+		Dopóki znowu nie nadejdzie wiosenny dzień<br>
 		꽃 피울 때까지<br>
-		그곳에 좀 더 머물러줘, 머물러줘
+		Dopóki nie rozkwitną kwiaty<br>
+		그곳에 좀 더 머물러줘, 머물러줘<br>
+		Proszę zostań tam jeszcze trochę dłużej
 	</p>
 </div>
 
@@ -168,13 +180,22 @@
 
 	<p>
 		네가 변한 건지 (네가 변한 건지)<br>
+		Czy to Ty się zmieniłeś?<br>
 		아니면 내가 변한 건지 (아니면 내가 변한 건지)<br>
+		Czy to ja się zmieniłem?<br>
 		이 순간 흐르는 시간조차 미워<br>
+		<del>Nienawidzę nawet każdej chwili tego przemijającego czasu</del><br>
+		<strong class="correct">W tej chwili nienawidzę nawet przemijającego czasu</strong><br>
 		우리가 변한 거지 뭐? 모두가 그런 거지 뭐?<br>
+		Cóż, zmieniliśmy się. Cóż, wszyscy się zmienili<br>
 		그래 밉다 네가, 넌 떠났지만<br>
+		Tak, nienawidzę Cię. Mimo że odszedłeś,<br>
 		단 하루도 너를 잊은 적이 없었지 난<br>
+		nawet i na jeden dzień o Tobie nie zapomniałem<br>
 		솔직히, 보고 싶은데, 이만 너를 지울게<br>
-		그게 널 원망하기보단 덜 아프니까
+		Szczerze mówiąc, tęsknię. Jednak teraz Cię wymażę.<br>
+		그게 널 원망하기보단 덜 아프니까<br>
+		Bo to boli mnie mniej, niż żywienie do Ciebie urazy
 	</p>
 </div>
 
@@ -190,9 +211,14 @@
 
 	<p>
 		시린 널 불어내 본다<br>
+		<del>Patrz, chucham na przemarzniętego Ciebie / Próbuję Cię zdmuchnąć (mimo że to trudne)</del><br>
+		<strong class="correct">Chucham na przemarzniętego Ciebie</strong><br>
 		연기처럼, 하얀 연기처럼<br>
+		Jak dym, biały dym<br>
 		말로는 지운다 해도<br>
-		사실 난 아직 널 보내지 못하는데
+		Mimo że mówię, że Cię wymażę,<br>
+		사실 난 아직 널 보내지 못하는데<br>
+		tak naprawdę jeszcze nie umiem pozwolić Ci odejść
 	</p>
 </div>
 
@@ -211,8 +237,11 @@
 	<p>
 		You know it all, you're my best friend<br>
 		아침은 다시 올 거야<br>
+		Ranek znowu nadejdzie<br>
 		어떤 어둠도 어떤 계절도<br>
-		영원할 순 없으니까
+		Bo żadna ciemność, żadna pora roku<br>
+		영원할 순 없으니까<br>
+		nie może trwać wiecznie
 	</p>
 </div>
 
@@ -230,13 +259,21 @@
 
 	<p>
 		벚꽃이 피나봐요<br>
+		Wygląda na to, że kwitną wiśnie<br>
 		이 겨울도 끝이 나요<br>
+		I ta zima też dobiega końca<br>
 		보고 싶다 (보고 싶다, ah)<br>
+		Tęsknię (tęsknię)<br>
 		보고 싶다 (보고 싶다, ah-ah-ah)<br>
+		Tęsknię (tęsknię)<br>
 		조금만 기다리면 (기다리면)<br>
+		Jeśli poczekasz jeszcze tylko chwilę<br>
 		며칠 밤만 더 새우면<br>
+		Jeśli spędzisz jeszcze tylko kilka nieprzespanych nocy<br>
 		만나러 갈게 (만나러 갈게)<br>
-		데리러 갈게 "데리러 갈게, yeah, eh-eh, yeah, yeah"
+		Przyjdę się z Tobą zobaczyć<br>
+		데리러 갈게 "데리러 갈게, yeah, eh-eh, yeah, yeah"<br>
+		Przyjdę, aby Cię zabrać
 	</p>
 </div>
 
