--- a/uj/zajecia/25-26z/klc3/lectures/grammar/1/index.html
+++ b/uj/zajecia/25-26z/klc3/lectures/grammar/1/index.html
@@ -93,7 +93,7 @@
 
 <ul>
 	<li>depend on the relation between the subject and the listener (instead of the speaker)</li>
-	<li>e.g. 할머니, 어머니가 어디에 있어?</li>
+	<li>e.g. 할머니, 어머니가 어디에 있어요?</li>
 </ul>
 
 </body></html>
