--- a/uj/zajecia/24-25l/ljk5/zajecia/czytanie/1/index.html
+++ b/uj/zajecia/24-25l/ljk5/zajecia/czytanie/1/index.html
@@ -114,6 +114,8 @@
 		<li>한류 배우는 인기에 상관없이 해외에서 광고 출연 요청을 받고 있다.</li>
 		<li>한류 배우가 큰 인기를 얻으면서 해외 광고 출연 요청이 잇따르고 있다.</li>
 	</ol>
+</div>
+<div class="exam-question">
 	<h3>26.</h3>
 	<ul>
 		<li>공장 - fabryka</li>
@@ -133,6 +135,8 @@
 		<li>반도체가 안정적으로 공급되기 위해서는 제2공장의 가동이 필수적이다.</li>
 		<li>반도체 공급이 안정적으로 이루어지면서 제2공장도 정상 가동될 수 있었다.</li>
 	</ol>
+</div>
+<div class="exam-question">
 	<h3>27.</h3>
 	<ul>
 		<li>거래 - transakcja</li>
@@ -180,6 +184,8 @@
 		<li>문구류와 붙지 않게</li>
 		<li>문구류에 닿지 않게</li>
 	</ol>
+</div>
+<div class="exam-question">
 	<h3>29.</h3>
 	<ul>
 		<li>날다 - latać</li>
@@ -207,31 +213,265 @@
 		<li>내가 가진 것에 감사하지 않고 남과 비교하면</li>
 		<li>인간관계가 힘들어 현실로부터 도망쳐 버리면</li>
 	</ol>
-	<!-- <h3>30.</h3> -->
-	<!-- <ul> -->
-	<!-- </ul> -->
-	<!-- <div class="topik-textbox"> -->
-		<!-- <p></p> -->
-	<!-- </div> -->
-	<!-- <ol> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-	<!-- </ol> -->
-	<!-- <h3>31.</h3> -->
-	<!-- <ul> -->
-	<!-- </ul> -->
-	<!-- <div class="topik-textbox"> -->
-		<!-- <p></p> -->
-	<!-- </div> -->
-	<!-- <ol> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-		<!-- <li></li> -->
-	<!-- </ol> -->
 </div>
+<div class="exam-question">
+	<h3>30.</h3>
+	<ul>
+		<li>수학 - matematyka</li>
+		<li>개념 - pojęcie</li>
+		<li>정립하다 - ustanowić</li>
+		<li>기호 - symbol (np. matematyczny)</li>
+		<li>등장하다 - pojawić się</li>
+		<li>가리키다 - wskazać</li>
+		<li>무한대 - nieskończoność</li>
+		<li>정반대 - całkowite przeciwieństwo</li>
+		<li>학자 - naukowiec</li>
+		<li>파악하다 - rozpoznać, zidentyfikować, zrozumieć, wyczuć</li>
+		<li>여기다 - uważać</li>
+		<li>-계 - świat (np. nauki)</li>
+		<li>정의하다 - zdefiniować</li>
+		<li>시도하다 - próbować</li>
+		<li>활발하다 - być aktywnym (np. w działaniu)</li>
+		<li>연구하다 - badać, prowadzić badania (np. naukowe)</li>
+		<li>이론 - teoria</li>
+	</ul>
+	<div class="topik-textbox">
+		<p>보통 수학에서는 개념이 먼저 정립되고 기호가 등장한다. 그러나 수가 끝없이 커지는 상태를 가리키는 무한대의 경우에는 정반대이다. 무한대는 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 후에도 한동안 개념이 정립되지 못했다. 왜냐하면 당시의 학자들은 무한대를 인간의 능력으로는 파악할 수 없다고 여겼기 때문이다. 그래서 수학계에서 무한대를 정의하는 것은 오랫동안 시도되지 않았다.</p>
+	</div>
+	<ol>
+		<li>기호가 만들어진</li>
+		<li>의미가 여러 번 바뀐</li>
+		<li>학계에서 활발히 연구된</li>
+		<li>반대되는 이론이 등장한</li>
+	</ol>
+</div>
+<div class="exam-question">
+	<h3>31.</h3>
+	<ul>
+		<li>업체 - przedsiębiorstwo</li>
+		<li>진출하다 - rozszerzać działalność</li>
+		<li>현지 - lokalny, regionalny</li>
+		<li>상품 - towar, produkt</li>
+		<li>전략 - strategia</li>
+		<li>취향 - upodobania</li>
+		<li>맞추다 - dostosować</li>
+		<li>성공하다 - osiągnąć sukces</li>
+		<li>빠뜨리다 - pominąć</li>
+		<li>기호 - gust</li>
+		<li>특성 - cechy szczególne</li>
+		<li>감추다 - ukryć</li>
+		<li>재현하다 - odtworzyć</li>
+	</ul>
+	<div class="topik-textbox">
+		<p>최근 한국의 편의점 업체가 해외로 진출하면서 현지에서 큰 인기를 끌고 있다. 인테리어에서 판매 상품까지 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 전략을 썼기 때문이다. 보통 마트가 해외에 진출할 때는 현지인의 취향에 맞추려고 하는데 이 편의점 업체는 이와 반대되는 방법을 써서 성공한 것이다.</p>
+	</div>
+	<ol>
+		<li>빠뜨리지 않고 홍보하는</li>
+		<li>판매자의 기호에 맞추는</li>
+		<li>편의점의 특성을 최대한 감추는</li>
+		<li>한국 편의점을 그대로 재현하는</li>
+	</ol>
+</div>
+
+<div class="exam-question">
+	<h2>[32~34]. 다음을 읽고 내용이 같은 것을 고르십시오.</h2>
+	<h3>32.</h3>
+	<ul>
+		<li>우주 - kosmos</li>
+		<li>과학 - nauka</li>
+		<li>투자 - inwestycja, inwestowanie</li>
+		<li>바 = 것</li>
+		<li>기여하다 - mieć wkład</li>
+		<li>향하다 - kierować się</li>
+		<li>통신 - komunikacja</li>
+		<li>분야 - sfera</li>
+		<li>우주인 - kosmonauta</li>
+		<li>식수 - woda pitna</li>
+		<li>장치 - urządzenie</li>
+		<li>정수기 - filtr do wody</li>
+		<li>개발하다 - wynaleźć</li>
+		<li>동결 - zamrożenie</li>
+		<li>건조 - wysuszenie</li>
+		<li>일회용 - jednorazowy</li>
+		<li>인류 - ludzkość</li>
+		<li>풍요롭다 - być bogatym (w coś)</li>
+	</ul>
+	<div class="topik-textbox">
+		<p>흔히 우주 과학은 투자 비용에 비해 우리 생활에 기여하는 바가 적다고 생각한다. 그러나 우주를 향한 인간의 노력은 통신, 의료 등의 분야는 물론이고 일상생활에도 큰 영향을 미쳤다. 우주인의 식수 해결을 위한 장치가 정수기가 되었고, 우주인의 식사용으로 개발된 동결 건조 식품이 물만 넣으면 먹을 수 있는 일회용 국이 되었다. 이렇게 일상 속으로 들어온 우주 과학은 인류의 생활을 더욱 편리하고 풍요롭게 하고 있다.</p>
+	</div>
+	<ol>
+		<li>정수기가 우주인의 식수를 해결해 주었다.</li>
+		<li>동결 건조 식품은 바쁜 일반인들을 위해 개발되었다.</li>
+		<li>우주 과학 기술 덕분에 생활에 편리한 제품이 개발되었다.</li>
+		<li>통신, 의료 분야에서 개발된 기술이 우주인들을 위해 사용되었다.</li>
+	</ol>
+</div>
+<div class="exam-question">
+	<h3>33.</h3>
+	<ul>
+		<li><a href="uj/zajecia/24-25l/ljk5/zajecia/czytanie/1/img/보자기.jpg">보자기</a></li>
+		<li>싸다 - zawinąć</li>
+		<li>실용적 - użyteczny</li>
+		<li>용도 - zastosowanie</li>
+		<li>천 - materiał</li>
+		<li>조각 - kawałek (np. materiału)</li>
+		<li>바느질 - szycie</li>
+		<li>인정(을) 받다 - zdobyć uznanie</li>
+		<li>자유분방하다 - być beztroskim</li>
+		<li>조화 - harmonia</li>
+		<li>기원하다 - życzyć</li>
+		<li>정성 - całe serce</li>
+	</ul>
+	<div class="topik-textbox">
+		<p>보자기는 물건을 싸는 실용적인 용도로 사용된다. 그중에서 쓰고 남은 천 조각으로 만든 것을 조각보라고 한다. 이 조각보를 만들 때는 쓰는 사람이 복을 받기를 바라는 마음으로 바느질을 한다. 이러한 조각보가 오늘날에는 예술적으로도 인정을 받고 있다. 색도, 모양도, 크기도 서로 다른 조각들을 이어 만든 조각보에는 자유분방한 아름다움과 조화로움이 살이 있기 때문이다.</p>
+	</div>
+	<ol>
+		<li>조각보는 실용성보다 예술성이 강조되어 있다.</li>
+		<li>조각보는 큰 천을 여러 조각으로 잘라서 만들었다.</li>
+		<li>조각보는 색이 같고 모양이 다른 조각이 이어져 있다.</li>
+		<li>조각보에는 복을 기원하는 정성스러운 마음이 담겨 있다.=</li>
+	</ol>
+</div>
+<div class="exam-question">
+	<h3>34.</h3>
+	<ul>
+		<li>지시어 - wskazujące słowo (np. zaimek)</li>
+		<li>타인 = 다른 사람</li>
+		<li>공유하다 - współdzielić, dzielić się (czymś z kimś)</li>
+		<li>생후 - po urodzeniu</li>
+		<li>무렵 = 즈음</li>
+		<li>습득하다 = 배우다</li>
+	</ul>
+	<div class="topik-textbox">
+		<p>아이가 ‘엄마’ 다음으로 빨리 배우는 말 중에는 ‘이것’과 같이 여러 물건을 가리키는 지시어가 있다. 지시어는 대화하는 상황을 타인과 공유해야 그 의미를 이해할 수 있다는 특성이 있다. 아기들은 이러한 지시어를 사용해 자연스럽게 부모의 관심을 끄는 것이다. 대부분의 아기들이 생후 12~18개월 무렵에 이런 지시어를 사용한다는 것은 이미 여러 언어 연구에서 밝혀진 바 있다.</p>
+	</div>
+	<ol>
+		<li>아기는 혼잣말을 할 때 지시어를 자주 사용한다.</li>
+		<li>아기는 엄마라는 단어보다 지시어를 먼저 습득한다.</li>
+		<li>지시어를 습득하는 시기는 언어권마다 다르게 나타난다.</li>
+		<li>시지어를 상대방과 상황을 공유해야 의미를 전달할 수 있다.</li>
+	</ol>
+</div>
+
+<!-- <div class="exam-question"> -->
+	<!-- <h3>35.</h3> -->
+	<!-- <ul> -->
+	<!-- </ul> -->
+	<!-- <div class="topik-textbox"> -->
+		<!-- <p></p> -->
+	<!-- </div> -->
+	<!-- <ol> -->
+		<!-- <li>.</li> -->
+		<!-- <li>.</li> -->
+		<!-- <li>.</li> -->
+		<!-- <li>.</li> -->
+	<!-- </ol> -->
+<!-- </div> -->
+
+<!-- <div class="exam-question"> -->
+	<!-- <h3>36.</h3> -->
+	<!-- <ul> -->
+	<!-- </ul> -->
+	<!-- <div class="topik-textbox"> -->
+		<!-- <p></p> -->
+	<!-- </div> -->
+	<!-- <ol> -->
+		<!-- <li>.</li> -->
+		<!-- <li>.</li> -->
+		<!-- <li>.</li> -->
+		<!-- <li>.</li> -->
+	<!-- </ol> -->
+<!-- </div> -->
+
+<!-- <div class="exam-question"> -->
+	<!-- <h3>37.</h3> -->
+	<!-- <ul> -->
+	<!-- </ul> -->
+	<!-- <div class="topik-textbox"> -->
+		<!-- <p></p> -->
+	<!-- </div> -->
+	<!-- <ol> -->
+		<!-- <li>.</li> -->
+		<!-- <li>.</li> -->
+		<!-- <li>.</li> -->
+		<!-- <li>.</li> -->
+	<!-- </ol> -->
+<!-- </div> -->
+
+<!-- <div class="exam-question"> -->
+	<!-- <h3>38.</h3> -->
+	<!-- <ul> -->
+	<!-- </ul> -->
+	<!-- <div class="topik-textbox"> -->
+		<!-- <p></p> -->
+	<!-- </div> -->
+	<!-- <ol> -->
+		<!-- <li>.</li> -->
+		<!-- <li>.</li> -->
+		<!-- <li>.</li> -->
+		<!-- <li>.</li> -->
+	<!-- </ol> -->
+<!-- </div> -->
+
+<!-- <div class="exam-question"> -->
+	<!-- <h3>39.</h3> -->
+	<!-- <ul> -->
+	<!-- </ul> -->
+	<!-- <div class="topik-textbox"> -->
+		<!-- <p></p> -->
+	<!-- </div> -->
+	<!-- <ol> -->
+		<!-- <li>.</li> -->
+		<!-- <li>.</li> -->
+		<!-- <li>.</li> -->
+		<!-- <li>.</li> -->
+	<!-- </ol> -->
+<!-- </div> -->
+
+<!-- <div class="exam-question"> -->
+	<!-- <h3>33.</h3> -->
+	<!-- <ul> -->
+	<!-- </ul> -->
+	<!-- <div class="topik-textbox"> -->
+		<!-- <p></p> -->
+	<!-- </div> -->
+	<!-- <ol> -->
+		<!-- <li>.</li> -->
+		<!-- <li>.</li> -->
+		<!-- <li>.</li> -->
+		<!-- <li>.</li> -->
+	<!-- </ol> -->
+<!-- </div> -->
+
+<!-- <div class="exam-question"> -->
+	<!-- <h3>40.</h3> -->
+	<!-- <ul> -->
+	<!-- </ul> -->
+	<!-- <div class="topik-textbox"> -->
+		<!-- <p></p> -->
+	<!-- </div> -->
+	<!-- <ol> -->
+		<!-- <li>.</li> -->
+		<!-- <li>.</li> -->
+		<!-- <li>.</li> -->
+		<!-- <li>.</li> -->
+	<!-- </ol> -->
+<!-- </div> -->
+
+<!-- <div class="exam-question"> -->
+	<!-- <h3>33.</h3> -->
+	<!-- <ul> -->
+	<!-- </ul> -->
+	<!-- <div class="topik-textbox"> -->
+		<!-- <p></p> -->
+	<!-- </div> -->
+	<!-- <ol> -->
+		<!-- <li>.</li> -->
+		<!-- <li>.</li> -->
+		<!-- <li>.</li> -->
+		<!-- <li>.</li> -->
+	<!-- </ol> -->
+<!-- </div> -->
 
 </body></html>
 
