--- a/uj/zajecia/24-25l/mkmb/index.html
+++ b/uj/zajecia/24-25l/mkmb/index.html
@@ -159,35 +159,29 @@
 				<th scope="row" rowspan="5">9</th>
 				<td rowspan="5">14 May 2025</td>
 				<td class="schedule-presentation">Homework 1</td>
-				<td class="schedule-presentation">Julia Domińska - entertainment industry</td>
-				<td class="schedule-presentation"></td>
+				<td colspan="2" class="schedule-presentation"><a href="uj/zajecia/24-25l/mkmb/homework/1">Julia Domińska - entertainment industry</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Homework 2</td>
-				<td class="schedule-presentation">Vanessa Khüebachová - cosmetics industry</td>
-				<td class="schedule-presentation"></td>
+				<td colspan="2" class="schedule-presentation"><a href="uj/zajecia/24-25l/mkmb/homework/2">Vanessa Khüebachová - cosmetics industry</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Homework 3</td>
-				<td class="schedule-presentation">Gabriela Pikus - international success of Korean cinema</td>
-				<td class="schedule-presentation"></td>
+				<td colspan="2" class="schedule-presentation"><a href="uj/zajecia/24-25l/mkmb/homework/3">Gabriela Pikus - international success of Korean cinema</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Homework 4</td>
-				<td class="schedule-presentation">Jaeseung Seo - military service in Korea</td>
-				<td class="schedule-presentation"></td>
+				<td colspan="2" class="schedule-presentation"><a href="uj/zajecia/24-25l/mkmb/homework/4">Jaeseung Seo - military service in Korea</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Homework 5</td>
-				<td class="schedule-presentation">Apolonia Strugarek - influence of social media</td>
-				<td class="schedule-presentation"></td>
+				<td colspan="2" class="schedule-presentation"><a href="uj/zajecia/24-25l/mkmb/homework/5">Apolonia Strugarek - influence of social media</a></td>
 			</tr>
 			<tr>
 				<th scope="row" rowspan="2">10</th>
 				<td rowspan="2">21 May 2025</td>
-				<td class="schedule-exam"><!--a href="uj/zajecia/24-25l/mkmb/test/2"-->Test 2<!--/a--></td>
-				<td class="schedule-exam"></td>
-				<td class="schedule-exam"></td>
+				<td class="schedule-exam">Test 2</td>
+				<td class="schedule-exam" colspan="2"><a href="uj/zajecia/24-25l/mkmb/test/2">인사말씀</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture" rowspan="3">Class</td>
@@ -210,23 +204,19 @@
 				<th scope="row" rowspan="4">13</th>
 				<td rowspan="4">11 June 2025</td>
 				<td class="schedule-presentation">Homework 6</td>
-				<td class="schedule-presentation">Edyta Płonka - successful Korean writers</td>
-				<td class="schedule-presentation"></td>
+				<td colspan="2" class="schedule-presentation"><a href="uj/zajecia/24-25l/mkmb/homework/6">Edyta Płonka - successful Korean writers</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Homework 7</td>
-				<td class="schedule-presentation">Julia Trzaska - human rights activism</td>
-				<td class="schedule-presentation"></td>
+				<td colspan="2" class="schedule-presentation"><a href="uj/zajecia/24-25l/mkmb/homework/7">Julia Trzaska - human rights activism</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Homework 8</td>
-				<td class="schedule-presentation">Julia Zawierucha - plastic surgery for foreigners in Korea</td>
-				<td class="schedule-presentation"></td>
+				<td colspan="2" class="schedule-presentation"><a href="uj/zajecia/24-25l/mkmb/homework/8">Julia Zawierucha - plastic surgery for foreigners in Korea</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Homework 9</td>
-				<td class="schedule-presentation">Karolina Żesławska - trends in food consumption</td>
-				<td class="schedule-presentation"></td>
+				<td colspan="2" class="schedule-presentation"><a href="uj/zajecia/24-25l/mkmb/homework/9">Karolina Żesławska - trends in food consumption</a></td>
 			</tr>
 		</tbody>
 		<tbody>
