--- a/viiilo/index.html
+++ b/viiilo/index.html
@@ -27,7 +27,7 @@
 <h3>rok szkolny 2025/2026</h3>
 
 <ul>
-	<li>Język koreański - poziom 1</li>
+	<li><a href="viiilo/zajecia/25-26/jk1">Język koreański - poziom 1</a></li>
 	<li><a href="viiilo/zajecia/25-26/jk2">Język koreański - poziom 2</a></li>
 	<li><a href="viiilo/zajecia/25-26/jk3">Język koreański - poziom 3</a></li>
 </ul>
