--- a/viiilo/zajecia/25-26/jk1/index.html
+++ b/viiilo/zajecia/25-26/jk1/index.html
@@ -2,7 +2,7 @@
 	<meta name="robots" content="none">
 	<meta name="viewport" content="width=device-width,height=device-height,initial-scale=1">
 
-	<title>Język koreański - poziom podstawowy</title>
+	<title>한국어 1급</title>
 	<meta name="author" content="Tomasz Wilczyński">
 
 	<base href="https://twilczynski.com/">
@@ -11,30 +11,105 @@
 	<link rel="stylesheet" media="print" href="viiilo/.res/print.css">
 </head><body class="home">
 
-<h1>Język koreański - poziom podstawowy</h1>
+<h1>한국어 1급</h1>
 
 <address>
 	dr Tomasz Wilczyński<br>
-	kontakt: <a href="mailto:tomasz1.wilczynski@uj.edu.pl">tomasz1.wilczynski@uj.edu.pl</a><br>
+	연락처: <a href="mailto:tomasz1.wilczynski@uj.edu.pl">tomasz1.wilczynski@uj.edu.pl</a><br>
 </address>
 
-<h2>Plan zajęć w roku szkolnym 2025/2026</h2>
+<h2>2025/2026학년 시간표</h2>
 
 <div class="class-schedule-container">
 	<table class="class-schedule">
 		<thead>
 			<tr>
-				<th scope="col">Tydzień</th>
-				<th scope="col">Data</th>
-				<th scope="col">Temat</th>
+				<th scope="col">주</th>
+				<th scope="col">날짜</th>
+				<th scope="col">제목</th>
 			</tr>
 		</thead>
 
 		<tbody>
 			<tr>
 				<th scope="row">1</th>
-				<td>24 października 2025</td>
+				<td>2025년 10월 2일</td>
 				<td class="schedule-lecture"><a href="viiilo/zajecia/25-26/jk1/zajecia/1">Język koreański (한국어)</a></td>
+			</tr>
+			<tr>
+				<th scope="row">4</th>
+				<td>2025년 10월 9일</td>
+				<td class="schedule-lecture" colspan="2"></td>
+			</tr>
+			<tr>
+				<th scope="row">5</th>
+				<td>2025년 10월 16일</td>
+				<td class="schedule-lecture" colspan="2"></td>
+			</tr>
+			<tr>
+				<th scope="row">6</th>
+				<td>2025년 10월 23일</td>
+				<td class="schedule-lecture" colspan="2"></td>
+			</tr>
+			<tr>
+				<th scope="row">7</th>
+				<td>2025년 10월 30일</td>
+				<td class="schedule-lecture" colspan="2"></td>
+			</tr>
+			<tr>
+				<th scope="row">8</th>
+				<td>2025년 11월 6일</td>
+				<td class="schedule-lecture" colspan="2"></td>
+			</tr>
+			<tr>
+				<th scope="row">9</th>
+				<td>2025년 11월 13일</td>
+				<td class="schedule-lecture" colspan="2"></td>
+			</tr>
+			<tr>
+				<th scope="row">10</th>
+				<td>2025년 11월 20일</td>
+				<td class="schedule-lecture" colspan="2"></td>
+			</tr>
+			<tr>
+				<th scope="row">11</th>
+				<td>2025년 11월 27일</td>
+				<td class="schedule-lecture" colspan="2"></td>
+			</tr>
+			<tr>
+				<th scope="row">12</th>
+				<td>2025년 12월 4일</td>
+				<td class="schedule-lecture" colspan="2"></td>
+			</tr>
+			<tr>
+				<th scope="row">13</th>
+				<td>2025년 12월 11일</td>
+				<td class="schedule-lecture" colspan="2"></td>
+			</tr>
+			<tr>
+				<th scope="row">14</th>
+				<td>2025년 12월 18일</td>
+				<td class="schedule-lecture" colspan="2"></td>
+			</tr>
+			<tr>
+				<th scope="row">15</th>
+				<td>2026년 1월 8일</td>
+				<td class="schedule-lecture" colspan="2"></td>
+			</tr>
+			<tr>
+				<th scope="row">16</th>
+				<td>2026년 1월 15일</td>
+				<td class="schedule-lecture" colspan="2"></td>
+			</tr>
+			<tr>
+				<th scope="row">17</th>
+				<td>2026년 1월 22일</td>
+				<td class="schedule-lecture" colspan="2"></td>
+			</tr>
+			<tr>
+				<th scope="row">18</th>
+				<td>2026년 1월 29일</td>
+				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 		</tbody>
 	</table>
