--- a/uj/zajecia/24-25l/ljk5/zajecia/czytanie/1/index.html
+++ b/uj/zajecia/24-25l/ljk5/zajecia/czytanie/1/index.html
@@ -348,7 +348,7 @@
 		<li>아기는 혼잣말을 할 때 지시어를 자주 사용한다.</li>
 		<li>아기는 엄마라는 단어보다 지시어를 먼저 습득한다.</li>
 		<li>지시어를 습득하는 시기는 언어권마다 다르게 나타난다.</li>
-		<li>시지어를 상대방과 상황을 공유해야 의미를 전달할 수 있다.</li>
+		<li>지시어를 상대방과 상황을 공유해야 의미를 전달할 수 있다.</li>
 	</ol>
 </div>
 
