--- a/uj/zajecia/25-26z/assk/index.html
+++ b/uj/zajecia/25-26z/assk/index.html
@@ -185,7 +185,7 @@
 				<th scope="row" rowspan="6">12</th>
 				<td rowspan="6">27 stycznia 2026</td>
 				<td class="schedule-presentation">Prezentacja 10</td>
-				<td class="schedule-presentation">Matylda Rzadkowska</td>
+				<td class="schedule-presentation">Matylda Rzadkowska - Kościół chrześcijański w Polsce i Korei Południowej</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 11</td>
