--- a/uj/zajecia/25-26z/ljk4/zajecia/czytanie/4/index.html
+++ b/uj/zajecia/25-26z/ljk4/zajecia/czytanie/4/index.html
@@ -180,7 +180,7 @@
 		<li>(나)-(다)-(라)-(가)</li>
 		<li>(나)-(라)-(다)-(가)</li>
 		<li>(라)-(가)-(다)-(나)</li>
-		<li>(라)-(나)-(가)-(다)</li>
+		<li>(라)-(나)-(가)-(다) <strong class="correct">✓</strong></li>
 	</ol>
 </div>
 
@@ -194,7 +194,7 @@
 		<li>학생들의 이름을 빨리 기억하기 위한</li>
 		<li>수업의 단계를 동일하게 맞추기 위한</li>
 		<li>수업의 진행을 좀 더 부드럽게 하기 위한</li>
-		<li>적극성이 떨어지는 학생들에게도 기회를 주기 위한</li>
+		<li>적극성이 떨어지는 학생들에게도 기회를 주기 위한 <strong class="correct">✓</strong></li>
 	</ol>
 </div>
 <div class="exam-question">
@@ -205,7 +205,7 @@
 	<ol>
 		<li>자원을 홍보하는</li>
 		<li>사람을 교육하는</li>
-		<li>씨앗을 수집하는</li>
+		<li>씨앗을 수집하는 <strong class="correct">✓</strong></li>
 		<li>저장고를 관리하는</li>
 	</ol>
 </div>
@@ -215,7 +215,7 @@
 		<p>땀은 체온을 조절하는 역할을 한다. 신체의 온도가 올라가면 몸에 남아도는 열기를 피부 밖으로 내보내기 위해 땀이 나는 것이다. 이때 피부 바로 아래에 퍼져 있는 핏줄들도 열을 식힐 수 있도록 더 많은 피를 흘려 보내게 된다. 그렇기 때문에 땀이 나면 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 것이다.</p>
 	</div>
 	<ol>
-		<li>피부가 빨갛게 보이는</li>
+		<li>피부가 빨갛게 보이는 <strong class="correct">✓</strong></li>
 		<li>피부를 통해 밖으로 나가는</li>
 		<li>몸에 기운이 없어지는</li>
 		<li>몸이 가벼워지는 느낌이 드는</li>
@@ -230,7 +230,7 @@
 	<h4>19. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 알맞은 것을 고르십시오.</h4>
 	<ol>
 		<li>과연</li>
-		<li>만약</li>
+		<li>만약 <strong class="correct">✓</strong></li>
 		<li>아마</li>
 		<li>하필</li>
 	</ol>
@@ -239,7 +239,7 @@
 		<li>서명이 있는 작품은 감정이 필요 없다.</li>
 		<li>미술품 감정 대상은 고미술품에 한정된다.</li>
 		<li>고미술품은 작품 고유의 번호를 가지고 있다.</li>
-		<li>미술품을 감정할 때 과학적인 방법이 사용된다.</li>
+		<li>미술품을 감정할 때 과학적인 방법이 사용된다. <strong class="correct">✓</strong></li>
 	</ol>
 </div>
 
