--- a/uj/zajecia/25-26z/ljk4/zajecia/czytanie/5/index.html
+++ b/uj/zajecia/25-26z/ljk4/zajecia/czytanie/5/index.html
@@ -2,23 +2,22 @@
 	<meta name="robots" content="none">
 	<meta name="viewport" content="width=device-width,height=device-height,initial-scale=1">
 
-	<title>Korean Language Class (3)</title>
+	<title>Lektorat języka koreańskiego - poziom 4</title>
 	<meta name="author" content="Tomasz Wilczyński">
 
 	<base href="https://twilczynski.com/">
 	<link rel="icon" href="data:,">
-	<link rel="stylesheet" media="all" href="uj/.res/all.css">
+	<link rel="stylesheet" href="uj/.res/all.css">
 	<link rel="stylesheet" media="print" href="uj/.res/print.css">
 </head><body class="home">
 
-<h1>Korean Language Class (3) - 말하기<br><br>상황극</h1>
+<h1>Lektorat języka koreańskiego - poziom 4 (czytanie)</h1>
 
-<h2>1. 기숙사에서 불편한 점을 제기하기</h2>
+<h2>문법 연습</h2>
 
-<h2>2. 교수님과 논문에 대해 상담하기</h2>
+<ul>
 
-<h2>3. 우체국에서 모국으로 소포를 보내기</h2>
-
-<h2>4. 은행에서 계좌를 개설하기</h2>
+</ul>
 
 </body></html>
+
