--- a/uj/zajecia/25-26z/ljk4/zajecia/znaki/4/index.html
+++ b/uj/zajecia/25-26z/ljk4/zajecia/znaki/4/index.html
@@ -264,46 +264,57 @@
 	<thead>
 		<th>한자어</th>
 		<th>문장 만들기 연습(괄호 안에 단어를 사용하기)</th>
+		<th>문장</th>
 	</thead>
 	<tr>
 		<td>間食</td>
 		<td>(견과류, 시험, 공부하다)</td>
+		<td>시험 공부할 때 견과류는 집중하기 위해 제일 좋은 <strong>간식(間食)</strong>이다.</td>
 	</tr>
 	<tr>
 		<td>穀食</td>
 		<td>(농부, 밀과 보리, 거두다)</td>
+		<td>추석 전에 농부들이 가장 많이 거두는 <strong>곡식(穀食)</strong>은 밀과 보리예요.</td>
 	</tr>
 	<tr>
 		<td>粉食</td>
 		<td>(불닭볶음면, 전세계, 인기)</td>
+		<td>불닭볶음면은 전세계에 인기가 많은 <strong>분식(粉食)</strong>이에요.</td>
 	</tr>
 	<tr>
 		<td>洋食</td>
 		<td>(한국 청소년, 맥도날드, 즐겨먹다)</td>
+		<td>한국 청소년들은 <strong>양식(洋食)</strong>을 즐겨먹기 때문에 맥도날드에 자주 가요.</td>
 	</tr>
 	<tr>
 		<td>後食</td>
 		<td>(한국인, 식사, 커피)</td>
+		<td>한국인들은 보통 밥을 먹은 다음에 <strong>후식(後食)</strong>으로 커피를 마셔요.</td>
 	</tr>
 	<tr>
 		<td>過食</td>
 		<td>(비만, 벗어나다, 자제하다)</td>
+		<td>비만에서 벗어나려면 <strong>과식(過食)</strong>을 자제해야 됩니다.</td>
 	</tr>
 	<tr>
 		<td>外食</td>
 		<td>(폴란드, 한국, 비하다, 자주 하다)</td>
+		<td>폴란드에서는 <strong>외식</strong> 가격이 더 저렴하기 때문에 한국에 비해서 더 자주 해요.</td>
 	</tr>
 	<tr>
 		<td>飮食</td>
 		<td>(스트레스, 해소하다, 맵다)</td>
+		<td>매운 <strong>음식(飮食)</strong>을 먹으면 스트레스를 해소할 수 있어요.</td>
 	</tr>
 	<tr>
 		<td>菜食</td>
 		<td>(사찰음식, 고기, 야채, 이루어지다)</td>
+		<td>사찰음식은 <strong>채식(菜食)</strong> 음식이라서 고기가 없고 야채만으로 이루어져 있어요.</td>
 	</tr>
 	<tr>
 		<td>會食</td>
 		<td>(교수, 학생들, 학기 말)</td>
+		<td>교수와 학생들이 학기 말에 <strong>회식(會食)</strong>을 했어요.</td>
 	</tr>
 </table>
 
