--- a/uj/zajecia/25-26z/ljk4/zajecia/znaki/5/index.html
+++ b/uj/zajecia/25-26z/ljk4/zajecia/znaki/5/index.html
@@ -125,52 +125,52 @@
 	<tr>
 		<td>一旦</td>
 		<td>(숙제, 산책)</td>
-		<td></td>
+		<td>집에 도착하면 <strong>일단(一旦)</strong>은 숙제를 하고 산책할 꼭 거예요.</td>
 	</tr>
 	<tr>
 		<td>一等</td>
 		<td>(학과, 연속)</td>
-		<td></td>
+		<td>우리 학과에서 저는 연속으로 <strong>일등(一等)</strong>했어요.</td>
 	</tr>
 	<tr>
 		<td>一般</td>
 		<td>(생활, 어렵다)</td>
-		<td></td>
+		<td>오포세대에 따르면 경제 때문에 <strong>일반(一般)</strong> 생활이 어려워요.</td>
 	</tr>
 	<tr>
 		<td>一方的</td>
 		<td>(약속, 연기하다)</td>
-		<td></td>
+		<td>비행기 지연 때문에 우리는 <strong>일방적(一方的)</strong>으로 약속을 연기해야 해요.</td>
 	</tr>
 	<tr>
 		<td>一部</td>
 		<td>(강의, 필수, 선택)</td>
-		<td></td>
+		<td>대학 강의의 <strong>일부(一部)</strong>는 필수, <strong>일부(一部)</strong>는 선택 과목으로 분류되어 있어요.</td>
 	</tr>
 	<tr>
 		<td>一時拂</td>
 		<td>(요금, 결제하다)</td>
-		<td></td>
+		<td>지금 <strong>일시불(一時拂)</strong>로 결제하면 추가요금이 없지만 매달 결제하면 추가요금은 있어요.</td>
 	</tr>
 	<tr>
 		<td>一定</td>
 		<td>(수술, 기간, 병원)</td>
-		<td></td>
+		<td>다음 주에 수술을 받으면 병원에서 <strong>일정(一定)</strong>한 기간 동안 쉬어야 하니 병가를 신청하려고 해요.</td>
 	</tr>
 	<tr>
 		<td>一致</td>
 		<td>(지문, 검사)</td>
-		<td></td>
+		<td>쌍둥이의 지문은 검사하면 <strong>일치(一致)</strong>할 거예요.</td>
 	</tr>
 	<tr>
 		<td>一行</td>
 		<td>(많다, 식당, 넓다)</td>
-		<td></td>
+		<td>이 식당에서는 춤을 출 수 있는 공간이 넓어서 파티에 <strong>일행(一行)</strong>을 많이 초대하면 좋아요.</td>
 	</tr>
 	<tr>
 		<td>一回用</td>
 		<td>(컵, 줄이다)</td>
-		<td></td>
+		<td>자연을 보호하기 위해서는 플라스틱 <strong>일홰용(一回用)</strong> 컵 사용을 줄여야 돼요.</td>
 	</tr>
 </table>
 
@@ -267,46 +267,57 @@
 	<thead>
 		<th>한자어</th>
 		<th>문장 만들기 연습(괄호 안에 단어를 사용하기)</th>
+		<th>문장</th>
 	</thead>
 	<tr>
+		<td>萬一</td>
+		<td>(경우, 대비하다, 저축하다)</td>
 		<td></td>
-		<td>()</td>
 	</tr>
 	<tr>
+		<td>第一</td>
+		<td>(지선, 어리다, 친하다, 친구)</td>
 		<td></td>
-		<td>()</td>
 	</tr>
 	<tr>
+		<td>同一</td>
+		<td>(조건, 재시험, 실시하다)</td>
 		<td></td>
-		<td>()</td>
 	</tr>
 	<tr>
+		<td>唯一</td>
+		<td>(감상하다, 나, 취미)</td>
 		<td></td>
-		<td>()</td>
 	</tr>
 	<tr>
+		<td>單一</td>
+		<td>(북한, 민족, 국가)</td>
 		<td></td>
-		<td>()</td>
 	</tr>
 	<tr>
+		<td>統一</td>
+		<td>(장벽, 동독, 서독])</td>
 		<td></td>
-		<td>()</td>
 	</tr>
 	<tr>
+		<td>均一</td>
+		<td>(특징, 전 상품, 가격, 판매하다)</td>
 		<td></td>
-		<td>()</td>
 	</tr>
 	<tr>
+		<td>一對一</td>
+		<td>(사항, 만나다, 이야기하다)</td>
 		<td></td>
-		<td>()</td>
 	</tr>
 	<tr>
+		<td>擇一</td>
+		<td>(교수, 시험, 과제, 양자)</td>
 		<td></td>
-		<td>()</td>
 	</tr>
 	<tr>
+		<td>劃一</td>
+		<td>(교육, 창의력, 발달, 방해하다)</td>
 		<td></td>
-		<td>()</td>
 	</tr>
 </table>
 
