--- a/uj/zajecia/25-26z/klc3/index.html
+++ b/uj/zajecia/25-26z/klc3/index.html
@@ -116,7 +116,7 @@
 			</tr>
 			<tr>
 				<td class="schedule-lecture" rowspan="2">문법</td>
-				<td class="schedule-lecture" colspan="2" rowspan="2">시간 표현; 부정 표현</td>
+				<td class="schedule-lecture" colspan="2" rowspan="2">시간·부정 표현</td>
 			</tr>
 			<tr>
 				<th scope="row" rowspan="2">7</th>
@@ -130,35 +130,35 @@
 				<th scope="row" rowspan="7">8</th>
 				<td colspan="2" rowspan="7">2025년 12월 5일</td>
 				<td class="schedule-exam" rowspan="6">말하기 중간고사</td>
-				<td class="schedule-exam">8:45–8:53</td>
+				<td class="schedule-exam">8:45~8:53</td>
 				<td class="schedule-exam">아네타, 주잔나</td>
 			</tr>
 			<tr>
-				<td class="schedule-exam">8:53–9:01</td>
+				<td class="schedule-exam">8:53~9:01</td>
 				<td class="schedule-exam">이레네, 안나</td>
 			</tr>
 			<!-- <tr> -->
-				<!-- <td class="schedule-exam">9:01–9:09</td> -->
+				<!-- <td class="schedule-exam">9:01~9:09</td> -->
 				<!-- <td class="schedule-exam">베아타, 베로니카</td> -->
 			<!-- </tr> -->
 			<!-- <tr> -->
-				<!-- <td class="schedule-exam">9:09–9:17</td> -->
+				<!-- <td class="schedule-exam">9:09~9:17</td> -->
 				<!-- <td class="schedule-exam">하티제, 에바</td> -->
 			<!-- </tr> -->
 			<tr>
-				<td class="schedule-exam">9:17–9:25</td>
+				<td class="schedule-exam">9:17~9:25</td>
 				<td class="schedule-exam">킹가 두데크, 카롤리나</td>
 			</tr>
 			<tr>
-				<td class="schedule-exam">9:25–9:33</td>
+				<td class="schedule-exam">9:25~9:33</td>
 				<td class="schedule-exam">율리아, 알렉산드라</td>
 			</tr>
 			<tr>
-				<td class="schedule-exam">9:33–9:41</td>
+				<td class="schedule-exam">9:33~9:41</td>
 				<td class="schedule-exam">킹가 마이헤르치크, 빅토리아</td>
 			</tr>
 			<tr>
-				<td class="schedule-exam">9:41–9:49</td>
+				<td class="schedule-exam">9:41~9:49</td>
 				<td class="schedule-exam">다리아, 마그달레나</td>
 			</tr>
 			<tr>
@@ -193,38 +193,96 @@
 			</tr>
 			<tr>
 				<td class="schedule-lecture">문법</td>
-				<td class="schedule-lecture" colspan="2">시간 표현; 부정 표현</td>
+				<td class="schedule-lecture" colspan="2">시간·부정 표현</td>
 			</tr>
 			<tr>
 				<th scope="row" rowspan="4">12</th>
 				<td rowspan="4">2025년 1월 23일</td>
 				<td rowspan="2">8:45~11:15</td>
 				<td class="schedule-lecture">말하기</td>
-				<td class="schedule-lecture" colspan="2"></td>
+				<td class="schedule-lecture" colspan="2">3과. 생각 없이 걷다 보면 스트레스도 풀리고 기분도 좋아져요</td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">문법</td>
-				<td class="schedule-lecture" colspan="2"></td>
+				<td class="schedule-lecture" colspan="2">시간·부정 표현 연습</td>
 			</tr>
 			<tr>
 				<td rowspan="2">13:15~15:45</td>
 				<td class="schedule-lecture">말하기</td>
-				<td class="schedule-lecture" colspan="2"></td>
+				<td class="schedule-lecture" colspan="2">상황극</td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">문법</td>
-				<td class="schedule-lecture" colspan="2"></td>
+				<td class="schedule-lecture" colspan="2">높임법 연습</td>
 			</tr>
 			<tr>
-				<th scope="row" rowspan="4">13</th>
-				<td rowspan="4">2026년 1월 30일</td>
-				<td rowspan="2">8:45~11:15</td>
-				<td class="schedule-exam">말하기 기말고사</td>
-				<td class="schedule-exam" colspan="2"></td>
+				<th scope="row" rowspan="19">13</th>
+				<td rowspan="19">2026년 1월 30일</td>
+				<td rowspan="16">8:45~11:15</td>
+				<td class="schedule-exam" rowspan="15">말하기 기말고사</td>
+				<td class="schedule-exam">9:00~9:05</td>
+				<td class="schedule-exam">마그달레나</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">9:05~9:10</td>
+				<td class="schedule-exam">에바</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">9:10~9:15</td>
+				<td class="schedule-exam">이레네</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">9:15~9:20</td>
+				<td class="schedule-exam">카롤리나</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">9:25~9:30</td>
+				<td class="schedule-exam">율리아</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">9:30~9:35</td>
+				<td class="schedule-exam">베로니카</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">9:35~9:40</td>
+				<td class="schedule-exam">아네타</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">9:40~9:45</td>
+				<td class="schedule-exam">킹가 마이헤르치크</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">9:45~9:50</td>
+				<td class="schedule-exam">안나</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">9:50~9:55</td>
+				<td class="schedule-exam">베아타</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">9:55~10:00</td>
+				<td class="schedule-exam">킹가 두데크</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">10:00~10:05</td>
+				<td class="schedule-exam">빅토리아</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">10:05~10:10</td>
+				<td class="schedule-exam">다리아</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">10:10~10:15</td>
+				<td class="schedule-exam">주잔나</td>
+			</tr>
+			<tr>
+				<td class="schedule-exam">10:20~10:25</td>
+				<td class="schedule-exam">알렉산드라</td>
 			</tr>
 			<tr>
 				<td class="schedule-exam">문법 기말고사</td>
-				<td class="schedule-exam" colspan="2"></td>
+				<td class="schedule-exam">10:35~11:20</td>
+				<td class="schedule-exam">시간·부정 표현</td>
 			</tr>
 			<tr>
 				<td rowspan="2">13:15~15:45</td>
