--- a/viiilo/zajecia/24-25z/jk2/index.html
+++ b/viiilo/zajecia/24-25z/jk2/index.html
@@ -87,14 +87,14 @@
 				<th scope="row" rowspan="3">8</th>
 				<td rowspan="3">13 grudnia 2024</td>
 				<td class="schedule-lecture" rowspan="3">Lekcja 8</td>
-				<td class="schedule-presentation"><a href="viiilo/zajecia/24-25z/jk2/zajecia/5-2">손글씨 (pismo odręczne)</a></td>
+				<td class="schedule-presentation"><!--a href="viiilo/zajecia/24-25z/jk2/zajecia/5-2">손글씨 (pismo odręczne)</a--></td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture" rowspan="3"><a href="viiilo/zajecia/24-25z/jk2/zajecia/5">05. 세종식당이 어디에 있어요?</a></td>
-				<td class="schedule-presentation"><a href="viiilo/zajecia/24-25z/jk2/zajecia/5-3">높임법 (honoryfikatywność)</a></td>
+				<td class="schedule-presentation"><!--a href="viiilo/zajecia/24-25z/jk2/zajecia/5-3"><높임법 (honoryfikatywność)></a--></td>
 			</tr>
 			<tr>
-				<td class="schedule-presentation"><a href="viiilo/zajecia/24-25z/jk2/zajecia/5-4">단위 명사 (klasyfikatory)</a></td>
+				<td class="schedule-presentation"><!--a href="viiilo/zajecia/24-25z/jk2/zajecia/5-4">단위 명사 (klasyfikatory)</a--></td>
 			</tr>
 			<tr>
 				<th scope="row">9</th>
