--- a/viiilo/zajecia/25-26/jk1/zajecia/1/index.html
+++ b/viiilo/zajecia/25-26/jk1/zajecia/1/index.html
@@ -2,7 +2,7 @@
 	<meta name="robots" content="none">
 	<meta name="viewport" content="width=device-width,height=device-height,initial-scale=1">
 
-	<title>Język koreański - poziom podstawowy</title>
+	<title>Język koreański - poziom 1</title>
 	<meta name="author" content="Tomasz Wilczyński">
 
 	<base href="https://twilczynski.com/">
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" media="print" href="viiilo/.res/print.css">
 </head><body class="home">
 
-<h1>Język koreański - poziom podstawowy</h1>
+<h1>Język koreański - poziom 1</h1>
 
 <h2>Język koreański (한국어) - podstawowe informacje</h2>
 
