--- a/uj/zajecia/24-25z/assk/index.html
+++ b/uj/zajecia/24-25z/assk/index.html
@@ -98,56 +98,64 @@
 				<td class="schedule-lecture">Zajęcia 1</td>
 				<td class="schedule-lecture"><a href="uj/zajecia/24-25z/assk/zajecia/1">muzyka</a></td>
 			</tr>
+		</tbody>
+		<tbody>
 			<tr>
 				<th scope="row">2</th>
 				<td>14 października 2024</td>
 				<td class="schedule-lecture">Zajęcia 2</td>
 				<td class="schedule-lecture"><a href="uj/zajecia/24-25z/assk/zajecia/2">malarstwo</a></td>
 			</tr>
+		</tbody>
+		<tbody>
 			<tr>
 				<th scope="row">3</th>
 				<td>21 października 2024</td>
 				<td class="schedule-lecture">Zajęcia 3</td>
 				<td class="schedule-lecture">literatura</td>
 			</tr>
-		<tbody>
 		</tbody>
+		<tbody>
 			<tr>
-				<th scope="row" rowspan="2">4</th>
-				<td rowspan="2">28 października 2024</td>
-				<td class="schedule-exam" colspan="2">Kolokwium 1</td>
-			</tr>
-			<tr>
+				<th scope="row">4</th>
+				<td>28 października 2024</td>
 				<td class="schedule-lecture">Zajęcia 4</td>
 				<td class="schedule-lecture"></td>
 			</tr>
-		<tbody>
 		</tbody>
+		<tbody>
 			<tr>
-				<th scope="row">5</th>
-				<td>4 listopada 2024</td>
+				<th scope="row" rowspan="2">5</th>
+				<td rowspan="2">4 listopada 2024</td>
+				<td class="schedule-exam">Kolokwium 1</td>
+				<td class="schedule-exam">muzyka, malarstwo, literatura</td>
+			</tr>
+			<tr>
 				<td class="schedule-lecture">Zajęcia 5</td>
 				<td class="schedule-lecture"></td>
 			</tr>
+		</tbody>
+		<tbody>
 			<tr>
 				<th scope="row">6</th>
 				<td>18 listopada 2024</td>
 				<td class="schedule-lecture">Zajęcia 6</td>
 				<td class="schedule-lecture"></td>
 			</tr>
-		<tbody>
 		</tbody>
+		<tbody>
 			<tr>
 				<th scope="row" rowspan="2">7</th>
 				<td rowspan="2">25 listopada 2024</td>
-				<td class="schedule-exam" colspan="2">Kolokwium 2</td>
+				<td class="schedule-exam">Kolokwium 2</td>
+				<td class="schedule-exam"></td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">Zajęcia 7</td>
 				<td class="schedule-lecture"></td>
 			</tr>
-		<tbody>
 		</tbody>
+		<tbody>
 			</tr>
 			<tr>
 				<th scope="row">8</th>
@@ -155,98 +163,91 @@
 				<td class="schedule-lecture">Zajęcia 8</td>
 				<td class="schedule-lecture"></td>
 			</tr>
-		<tbody>
 		</tbody>
+		<tbody>
 			<tr>
 				<th scope="row">9</th>
 				<td>9 grudnia 2024</td>
 				<td class="schedule-lecture">Zajęcia 9</td>
 				<td class="schedule-lecture"></td>
 			</tr>
-		<tbody>
 		</tbody>
+		<tbody>
 			<tr>
 				<th scope="row" rowspan="2">10</th>
 				<td rowspan="2">16 grudnia 2024</td>
-				<td class="schedule-exam" colspan="2">Kolokwium 3</td>
+				<td class="schedule-exam">Kolokwium 3</td>
+				<td class="schedule-exam"></td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">Zajęcia 10</td>
 				<td class="schedule-lecture"></td>
 			</tr>
-		<tbody>
 		</tbody>
+		<tbody>
 			<tr>
 				<th scope="row" rowspan="5">11</th>
 				<td rowspan="5">13 stycznia 2025</td>
 				<td class="schedule-presentation">Prezentacja 1</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Yuliya Davydzenka</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 2</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Diana Grigoryan</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 3</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Miłosz Madoń</td>
 			</tr>
-			<tr>
-				<td class="schedule-presentation">Prezentacja 4</td>
-				<td class="schedule-presentation"></td>
-			</tr>
-			<tr>
-				<td class="schedule-presentation">Prezentacja 5</td>
-				<td class="schedule-presentation"></td>
-			</tr>
-		<tbody>
 		</tbody>
+		<tbody>
 			<tr>
 				<th scope="row" rowspan="5">12</th>
 				<td rowspan="5">20 stycznia 2025</td>
+				<td class="schedule-presentation">Prezentacja 4</td>
+				<td class="schedule-presentation">Sofiia Martynenko</td>
+			</tr>
+			<tr>
+				<td class="schedule-presentation">Prezentacja 5</td>
+				<td class="schedule-presentation">Jagoda Tarańska</td>
+			</tr>
+			<tr>
 				<td class="schedule-presentation">Prezentacja 6</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Adam Mszański</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 7</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Marta Gałązkiewicz</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 8</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Paulina Wałęga</td>
 			</tr>
-			<tr>
-				<td class="schedule-presentation">Prezentacja 9</td>
-				<td class="schedule-presentation"></td>
-			</tr>
-			<tr>
-				<td class="schedule-presentation">Prezentacja 10</td>
-				<td class="schedule-presentation"></td>
-			</tr>
-		<tbody>
 		</tbody>
+		<tbody>
 			<tr>
 				<th scope="row" rowspan="5">13</th>
 				<td rowspan="5">27 stycznia 2025</td>
+				<td class="schedule-presentation">Prezentacja 9</td>
+				<td class="schedule-presentation">Matylda Siodmok</td>
+			</tr>
+			<tr>
+				<td class="schedule-presentation">Prezentacja 10</td>
+				<td class="schedule-presentation">Adam Świętojański</td>
+			</tr>
+			<tr>
 				<td class="schedule-presentation">Prezentacja 11</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Katarzyna Cepuch</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 12</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Paulina Tapa</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 13</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">Kiryl Navalotski</td>
 			</tr>
-			<tr>
-				<td class="schedule-presentation">Prezentacja 14</td>
-				<td class="schedule-presentation"></td>
-			</tr>
-			<tr>
-				<td class="schedule-presentation">Prezentacja 15</td>
-				<td class="schedule-presentation"></td>
-			</tr>
-		<tbody>
+		</tbody>
 	</table>
 </div>
 
