--- a/uj/zajecia/24-25z/ljk4/zajecia/1/index.html
+++ b/uj/zajecia/24-25z/ljk4/zajecia/1/index.html
@@ -97,7 +97,7 @@
 		<li>주말에는 단체 할인을 받을 수 있다.</li>
 		<li>이 행사는 이번에 처음 열리는 행사이다.</li>
 		<li>특별권을 사면 놀이 시설 이용료가 할인된다.</li>
-		<li>지하철을 타고 가면 입장권을 싸게 살 수 있다.</li>
+		<li>지하철을 타고 가면 입장권을 싸게 살 수 있다. <strong class="correct">✓</strong></li>
 	</ol>
 	<h4>11.</h4>
 	<ul>
@@ -115,7 +115,7 @@
 		<li>뇌 건강과 손을 움직이는 것은 서로 관계가 없다.</li>
 		<li>우리 몸과 달리 뇌는 간단한 일로 자극받지 않는다.</li>
 		<li>뇌 활동을 위해 익숙한 방법으로 손을 쓰는 것이 더 좋다.</li>
-		<li>자주 사용하지 않던 손을 사용하면 뇌 움직임이 활발해진다.</li>
+		<li>자주 사용하지 않던 손을 사용하면 뇌 움직임이 활발해진다. <strong class="correct">✓</strong></li>
 	</ol>
 	<h4>12.</h4>
 	<ul>
@@ -123,7 +123,7 @@
 		<li>대회 - konkurs, zawody</li>
 		<li>개최하다 - zorganizować</li>
 		<li>주제 - temat</li>
-		<li><a href="uj/zajecia/24-25z/ljk4/zajecia/1/img/원고지.jpg">원고지</a> - papier kratkowany</li>
+		<li>원고지 - papier kratkowany</li>
 		<li>예선 - eliminacje</li>
 		<li>심사 - selekcja</li>
 		<li>본선 - finały</li>
@@ -137,7 +137,7 @@
 	<ol>
 		<li>대회에서 발표할 원고의 양은 제한이 없다.</li>
 		<li>외국에서 살고 있는 사람도 참가할 수 있다.</li>
-		<li>본선 참가자는 홈페이지에서 확인할 수 있다.</li>
+		<li>본선 참가자는 홈페이지에서 확인할 수 있다. <strong class="correct">✓</strong></li>
 		<li>신청자는 신문사에 가서 원고를 제출하면 된다.</li>
 	</ol>
 </div>
@@ -160,7 +160,7 @@
 	</div>
 	<ol>
 		<li>(가)-(다)-(나)-(라)</li>
-		<li>(가)-(다)-(라)-(나)</li>
+		<li>(가)-(다)-(라)-(나) <strong class="correct">✓</strong></li>
 		<li>(다)-(나)-(가)-(라)</li>
 		<li>(다)-(라)-(가)-(나)</li>
 	</ol>
@@ -187,7 +187,7 @@
 		<li>(나)-(다)-(라)-(가)</li>
 		<li>(나)-(라)-(다)-(가)</li>
 		<li>(라)-(가)-(다)-(나)</li>
-		<li>(라)-(나)-(가)-(다)</li>
+		<li>(라)-(나)-(가)-(다) <strong class="correct">✓</strong></li>
 	</ol>
 	<h4>15.</h4>
 	<ul>
