--- a/uj/zajecia/24-25z/assk/index.html
+++ b/uj/zajecia/24-25z/assk/index.html
@@ -176,7 +176,7 @@
 				<th scope="row" rowspan="2">10</th>
 				<td rowspan="2">16 grudnia 2024</td>
 				<td class="schedule-exam">Kolokwium 3</td>
-				<td class="schedule-exam"></td>
+				<td class="schedule-exam"><a href="uj/zajecia/24-25z/assk/testy/3">teatr, kulinaria</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">Zajęcia 9</td>
@@ -188,19 +188,19 @@
 				<th scope="row" rowspan="5">11</th>
 				<td rowspan="5">13 stycznia 2025</td>
 				<td class="schedule-presentation">Prezentacja 1</td>
-				<td class="schedule-presentation">Yuliya Davydzenka – Koreańska architektura na przykładzie tradycyjnego domu <i>hanok</i></td>
+				<td class="schedule-presentation">Joanna Latuszek – Tradycyjne koreańskie ceremonie ślubne</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 2</td>
-				<td class="schedule-presentation">Diana Grigoryan – Analiza koreańskiego społeczeństwa na podstawie filmu <i>Parasite</i></td>
+				<td class="schedule-presentation">Yuliya Davydzenka – Koreańska architektura na przykładzie tradycyjnego domu <i>hanok</i></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 3</td>
-				<td class="schedule-presentation">Miłosz Madoń – Społeczne problemy szkolnej młodzież na przykładzie filmów <i>Han Gong-ju</i> i <i>Sala Samobójców</i></td>
+				<td class="schedule-presentation">Diana Grigoryan – Analiza koreańskiego społeczeństwa na podstawie filmu <i>Parasite</i></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Prezentacja 4</td>
-				<td class="schedule-presentation">Joanna Latuszek – Tradycyjne koreańskie ceremonie ślubne</td>
+				<td class="schedule-presentation">Miłosz Madoń – Społeczne problemy szkolnej młodzież na przykładzie filmów <i>Han Gong-ju</i> i <i>Sala Samobójców</i></td>
 			</tr>
 		</tbody>
 		<tbody>
