--- a/uj/zajecia/24-25z/ljk4/zajecia/4/index.html
+++ b/uj/zajecia/24-25z/ljk4/zajecia/4/index.html
@@ -79,7 +79,7 @@
 		<img src="uj/zajecia/24-25z/ljk4/zajecia/4/img/5.png" alt="5">
 	</div>
 	<ol>
-		<li>자연 보호</li>
+		<li>자연 보호 <strong class="correct">✓</strong></li>
 		<li>시간 절약</li>
 		<li>자리 양보</li>
 		<li>안전 관리</li>
@@ -97,7 +97,7 @@
 		<img src="uj/zajecia/24-25z/ljk4/zajecia/4/img/6.png" alt="5">
 	</div>
 	<ol>
-		<li>전화 예절</li>
+		<li>전화 예절 <strong class="correct">✓</strong></li>
 		<li>식사 예절</li>
 		<li>건강 관리</li>
 		<li>안전 관리</li>
@@ -109,7 +109,7 @@
 		<img src="uj/zajecia/24-25z/ljk4/zajecia/4/img/7.png" alt="5">
 	</div>
 	<ol>
-		<li>환경 보호</li>
+		<li>환경 보호 <strong class="correct">✓</strong></li>
 		<li>공원 소개</li>
 		<li>날씨 정보</li>
 		<li>여행 계획</li>
@@ -129,7 +129,7 @@
 		<li>우체국</li>
 		<li>여행사</li>
 		<li>편의점</li>
-		<li>빨래방</li>
+		<li>빨래방 <strong class="correct">✓</strong></li>
 	</ol>
 </div>
 
@@ -146,7 +146,7 @@
 	</div>
 	<ol>
 		<li>이 대회는 이번에 처음으로 열린다.</li>
-		<li>이 대회에는 누구나 참가할 수 있다.</li>
+		<li>이 대회에는 누구나 참가할 수 있다. <strong class="correct">✓</strong></li>
 		<li>이 대회에 참가하려면 돈을 내야 한다.</li>
 		<li>이 대회의 출발 장소는 인주기념관이다.</li>
 	</ol>
@@ -169,15 +169,15 @@
 		<li>성인과 학생의 버스 요금이 같다.</li>
 		<li>이 버스는 별빛공원에서 출발한다.</li>
 		<li>매일 오전에 이 버스를 탈 수 있다.</li>
-		<li>이 버스를 타려면 미리 신청해야 한다.</li>
+		<li>이 버스를 타려면 미리 신청해야 한다. <strong class="correct">✓</strong></li>
 	</ol>
 </div>
 <div class="exam-question">
 	<h3>11.</h3>
 	<ul>
 		<li>만화 - komiks</li>
-		<li>공산 - przestrzeń</li>
-		<li>벗어나 - wyjść/wykroczyć poza</li>
+		<li>공간 - przestrzeń</li>
+		<li>벗어나다 - wyjść/wykroczyć poza</li>
 		<li>ㄹ/을거리 = ㄹ/을 것</li>
 		<li>즐기다 - cieszyć się (czymś)</li>
 		<li>태어나다 - urodzić/narodzić się</li>
@@ -196,7 +196,7 @@
 		<li>만화카페는 만화방과 실내 분위기가 비슷하다.</li>
 		<li>만화카페는 주로 남성들에게 인기를 끌고 있다.</li>
 		<li>만화카페는 커피를 마시기 위한 곳으로 새롭게 태어났다.</li>
-		<li>만화카페는 볼거리와 먹을거리를 모두 즐길 수 있는 곳이다.</li>
+		<li>만화카페는 볼거리와 먹을거리를 모두 즐길 수 있는 곳이다. <strong class="correct">✓</strong></li>
 	</ol>
 </div>
 <div class="exam-question">
@@ -224,7 +224,7 @@
 		<li>학부모들은 정장형 교복을 더 좋아한다.</li>
 		<li>새 교복은 정장형 교복보다 가격이 비싸다.</li>
 		<li>기존 교복에 비해 새 교복은 활동할 때 불편하다.</li>
-		<li>학교는 학생들의 의견을 받아들여서 교복을 바꿨다.</li>
+		<li>학교는 학생들의 의견을 받아들여서 교복을 바꿨다. <strong class="correct">✓</strong></li>
 	</ol>
 </div>
 
@@ -248,7 +248,7 @@
 	<ol>
 		<li>(나)-(다)-(라)-(가)</li>
 		<li>(나)-(라)-(가)-(다)</li>
-		<li>(다)-(나)-(가)-(라)</li>
+		<li>(다)-(나)-(가)-(라) <strong class="correct">✓</strong></li>
 		<li>(다)-(나)-(라)-(가)</li>
 	</ol>
 </div>
@@ -273,7 +273,7 @@
 	</div>
 	<ol>
 		<li>(가)-(다)-(라)-(나)</li>
-		<li>(나)-(가)-(다)-(라)</li>
+		<li>(나)-(가)-(다)-(라) <strong class="correct">✓</strong></li>
 		<li>(가)-(라)-(나)-(다)</li>
 		<li>(나)-(라)-(다)-(가)</li>
 	</ol>
