--- a/uj/zajecia/24-25z/ljk4/index.html
+++ b/uj/zajecia/24-25z/ljk4/index.html
@@ -138,7 +138,7 @@
 			<tr>
 				<th scope="row" rowspan="2">10</th>
 				<td rowspan="2">16 grudnia 2024</td>
-				<td class="schedule-exam" colspan="2">Kolokwium 3</td>
+				<td class="schedule-exam" colspan="2"><a href="uj/zajecia/24-25z/ljk4/testy/3">Kolokwium 3</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">Zajęcia 10</td>
