--- a/uj/zajecia/24-25z/ljk4/testy/3/index.html
+++ b/uj/zajecia/24-25z/ljk4/testy/3/index.html
@@ -20,7 +20,7 @@
 	</ul>
 	<p>한국 친구 덕분에 한국 문화를 많이 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;).</p>
 	<ol>
-		<li>알게 되었다</li>
+		<li>알게 되었다 <strong class="correct">✓</strong></li>
 		<li>알도록 했다</li>
 		<li>알아도 된다</li>
 		<li>알아야 한다</li>
@@ -39,7 +39,7 @@
 	<ol>
 		<li>연습할 따름이다</li>
 		<li>연습할 모양이다</li>
-		<li>연습하기 나름이다</li>
+		<li>연습하기 나름이다 <strong class="correct">✓</strong></li>
 		<li>연습하기 십상이다</li>
 	</ol>
 </div>
@@ -59,7 +59,7 @@
 		<img src="uj/zajecia/24-25z/ljk4/testy/3/img/3.png" alt="3">
 	</div>
 	<ol>
-		<li>주의 사항</li>
+		<li>주의 사항 <strong class="correct">✓</strong></li>
 		<li>재료 안내</li>
 		<li>구입 방법</li>
 		<li>제품 문의</li>
@@ -82,7 +82,7 @@
 	<ol>
 		<li>여러 나라 작가가 이번 전시회에 참여한다.</li>
 		<li>이 전시회에 가면 가을에 대한 사진을 볼 수 있다.</li>
-		<li>가족 사진을 들고 가면 관람료를 내지 않아도 된다.</li>
+		<li>가족 사진을 들고 가면 관람료를 내지 않아도 된다. <strong class="correct">✓</strong></li>
 		<li>작가와의 대화는 전시회 기간 동안 날마다 진행된다.</li>
 	</ol>
 </div>
@@ -104,7 +104,7 @@
 	</div>
 	<ol>
 		<li>이곳에서 옛날 영화 포스터를 살 수 있다.</li>
-		<li>얼마 전 추억의 문화 공간이 새로 만들어졌다.</li>
+		<li>얼마 전 추억의 문화 공간이 새로 만들어졌다. <strong class="correct">✓</strong></li>
 		<li>추억극장이 입장료가 없기 때문에 인기가 많다.</li>
 		<li>추억극장에서는 최근에 나온 영화도 볼 수 있다.</li>
 	</ol>
@@ -132,7 +132,7 @@
 	</div>
 	<ol>
 		<li>(가)-(나)-(라)-(다)</li>
-		<li>(가)-(라)-(나)-(다)</li>
+		<li>(가)-(라)-(나)-(다) <strong class="correct">✓</strong></li>
 		<li>(나)-(가)-(라)-(다)</li>
 		<li>(나)-(다)-(가)-(라)</li>
 	</ol>
@@ -162,7 +162,7 @@
 	<ol>
 		<li>하루 식사량을 늘리는</li>
 		<li>식탁을 아름답게 꾸미는</li>
-		<li>나쁜 식사 습관을 고치는</li>
+		<li>나쁜 식사 습관을 고치는 <strong class="correct">✓</strong></li>
 		<li>바른 식사 예절을 배우는</li>
 	</ol>
 </div>
@@ -175,7 +175,7 @@
 	<h3>8. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 알맞은 것을 고르십시오.</h3>
 	<ol>
 		<li>반면</li>
-		<li>물론</li>
+		<li>물론 <strong class="correct">✓</strong></li>
 		<li>차라리</li>
 		<li>그러면</li>
 	</ol>
@@ -184,7 +184,7 @@
 		<li>아이들은 자기 스스로 인성을 완성할 수 있다.</li>
 		<li>청소년기에는 친구 같은 아빠의 역할이 더 중요하다.</li>
 		<li>친구 같은 아빠는 아이가 바른 길로 가도록 도움을 준다.</li>
-		<li>권위 있는 아빠는 아이에게 삶의 판단 기준을 제시할 수 있다.</li>
+		<li>권위 있는 아빠는 아이에게 삶의 판단 기준을 제시할 수 있다. <strong class="correct">✓</strong></li>
 	</ol>
 </div>
 
